--- a/api/auth/Makefile
+++ b/api/auth/Makefile
@@ -12,6 +12,10 @@ build: proto
 proto:
 	protoc --proto_path=${GOPATH}/src:. --micro_out=. --go_out=. proto/*.proto
 
+.PHONY: dev
+dev:
+	go run . --registry consul --registry_address 127.0.0.1:8500
+
 .PHONY: test
 test:
 	go test -v ./... -cover
